welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: value Direction
	if(getDirection() == Direction.WEST && 
                             ^